--- a/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-card/shop-card.component.html
@@ -30,8 +30,7 @@
   </div>
   <div *ngIf="hasEditButton === true" class="add-product-button-container">
     <div class="button-subcontainer">
-      <!-- DESCOMENTAR!!! -->
-      <!-- <app-edit-product-button productId={{productId}}></app-edit-product-button> -->
+      <app-edit-product-button productId={{productId}}></app-edit-product-button>
     </div>
   </div>
 </div>
