--- a/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/order-confirmed/order-confirmed.component.scss
@@ -23,6 +23,13 @@
   justify-content: center;
 }
 
+.video-container {  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
 h1 {
   text-align: center;
 }
@@ -30,5 +37,4 @@ h1 {
 h4 {
   text-align: left;
   margin-top: 40px;
-  margin-bottom: 60px;
 }
