--- a/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.html
@@ -22,6 +22,7 @@
         [subtitle]="s.street + ' ' + s.streetNumber"
         bottomText="{{ s.stars }}"
         [hasStar]="true"
+        [routerLink]="['/shop-customer', s.id]"
         [imagePath]="s.logoPath"
       >
       </app-shop-card>
