--- a/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/order-details/order-details.component.scss
@@ -41,7 +41,6 @@
 
 .line-items-container {
   margin: 10px 0;
-  //width: 80%;
 }
 
 .line-item {
@@ -49,7 +48,6 @@
 }
 
 .total-container {
-  //width: 80%;
   display: flex;
   justify-content: space-between;
   border-top: 1px solid rgba(0, 0, 0, .2);
@@ -57,6 +55,9 @@
 }
 
 .button-container {
-  //width: 80%;
-  margin-top: 80px;
+  margin-top: 40px;
+}
+
+.payment-container {
+  margin-top: 30px;
 }
