--- a/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.html
@@ -1,35 +1,59 @@
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 <nav class="navbar">
-  <div class = "container-pindrop">
+  <div class="container-pindrop">
     <span class="material-symbols-rounded pin_drop"> pin_drop </span>
-  </div> 
+  </div>
   <div class="container-menu">
     <span class="material-symbols-rounded menu">menu</span>
   </div>
 </nav>
-<h6 id="welcome-sign" (click)="alterView()">Bienvenido: Francisco</h6>  <!--el evento es para testear, va a ser removido-->
+
+<h6 id="welcome-sign">Bienvenido: Sergio Tomás</h6> <!--el evento es para testear, va a ser removido-->
+
 <h2>Tus Pedidos en Curso</h2>
+
 <div class="current-orders">
-  <div *ngIf="pedidosEnCurso === false" class="no-orders">
+  <div *ngIf="currentDeliveries.length === 0" class="no-orders">
     <img class="img-no-orders" src="../assets/delivery boy on scooter.png">
     <h3>Vaya... No tienes pedidos en curso</h3>
   </div>
-  <div *ngIf="pedidosEnCurso === true" class="active-orders">
-    <!--Acá iría un div con un *ngFor con cada pedido activo perteneciente al repartidor-->
-    <app-shop-card title="Lemmy's Pizza" subtitle="Origen: Urquiza 1500" bottomText=" Destino: Laprida 736" [hasStar]=false [hasDropdown]=true></app-shop-card>
+  <div *ngIf="currentDeliveries.length > 0" class="active-orders">
+    <app-shop-card (retrieveOrderId)="setDateTimeArrival($event)" *ngFor="let order of currentDeliveries" 
+    [title]="order.lineItems[0].product.shop.name"
+    [subtitle]="'Origen: ' + order.lineItems[0].product.shop.street + ' ' + order.lineItems[0].product.shop.streetNumber "
+    [bottomText]="'Destino: ' + order.client.street + ' ' + order.client.streetNumber" 
+    [hasStar]=false
+    [hasDropdown]=true 
+    [hasDescription]=false 
+    imagePath={{order.lineItems[0].product.shop.logoPath}}
+    description={{getDescription(order)}}
+    [client]="order.client.name + ' ' + order.client.surname" 
+    [paymentType]=order.paymentType.description
+    price={{getPrice(order)}} 
+    orderStatus="En camino" 
+    orderId={{order.id}}>
+    </app-shop-card>
   </div>
   <a id="explore-more-deliveries" routerLink="/explore-new-deliveries"><app-primary-button title="Explorar más pedidos"></app-primary-button></a>
 </div>
-<hr id="division">
-<h6 id="welcome-sign">Tus últimas entregas</h6>
-<!--Aca va a tener que ir un *ngFor con los pedidos entregados pertenecientes al repartidor-->
-<div class="last-orders-container">
+
+<hr id="division" *ngIf="pastDeliveries.length > 0">
+
+<h6 *ngIf="pastDeliveries.length > 0" id="welcome-sign">Tus últimas entregas</h6>
+
+<div *ngIf="pastDeliveries.length > 0" class="last-orders-container">
   <div class="shop-cards-container">
-    <app-shop-card title="Lemmy's Pizza" subtitle="Urquiza 1500" bottomText="1 x Cerveza Andes, 2 x Pizza New York" [hasStar]=false></app-shop-card>
-    <app-shop-card title="Mostaza" subtitle="Av. Pellegrini 1700" bottomText="1 x Cajita Mostaza, 2 x Mega Dibu" [hasStar]=false></app-shop-card>
+    <app-shop-card  *ngFor="let order of pastDeliveries"
+    [title]="order.lineItems[0].product.shop.name"
+    imagePath={{order.lineItems[0].product.shop.logoPath}}
+    [subtitle]="'Destino: ' + order.client.street + ' ' + order.client.streetNumber" 
+    [bottomText]="'Entregada: ' + order.dateTimeArrival"
+    [hasStar]=false></app-shop-card>
   </div>
 </div>
-<footer>
-  <a id="all-delivered-dropdown" routerLink="/all-delivered-orders"><span class="material-symbols-rounded expand_more"> expand_more </span></a>
+
+<footer *ngIf="pastDeliveries.length > 0">
+  <a id="all-delivered-dropdown" routerLink="/all-delivered-orders"><span class="material-symbols-rounded expand_more">expand_more </span></a>
 </footer>
