Updated and Finished delivery, independent entities and error panel

--- a/Front-end App/DeliverItAngularProject/src/app/add-payment-type/add-payment-type.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/add-payment-type/add-payment-type.component.html
@@ -3,7 +3,7 @@
 
 
 <div class="container">
-  <h1>Agregar tipo de pago</h1>
+  <h1>Agregar Forma de pago</h1>
   <form class="input-button" [formGroup]="addPaymentTypeForm">
     <div class="input-group">
       <h6>Descripción</h6>
