--- a/Front-end App/DeliverItAngularProject/src/app/admin-panel/admin-panel.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/admin-panel/admin-panel.component.html
@@ -5,7 +5,7 @@
         <img id="plus_icon" src="assets\buttons_logos\plus_sign_icon.png" alt="plus_sign_icon">
       </div>
       <div class="button_text">
-        <p id="add_prod_text">Agregar Tipo de pago</p>
+        <p id="add_prod_text">Agregar Forma de pago</p>
       </div>
     </div>
   </div>
@@ -15,7 +15,7 @@
         <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="plus_sign_icon">
       </div>
       <div class="button_text">
-        <p id="add_prod_text">Editar tipo de pago</p>
+        <p id="add_prod_text">Editar Forma de pago</p>
       </div>
     </div>
   </div>
