--- a/Front-end App/DeliverItAngularProject/src/app/error-panel/error-panel.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/error-panel/error-panel.component.html
@@ -4,8 +4,8 @@
     <div class="text-logo">
       <h1 class="highlighter">Ups! Ha ocurrido un error</h1>
       <img src="../assets/error-panel-image.png">
-      <h1>Error: </h1>
-      <h4>Mensaje: </h4>
+      <h1>Error: {{statusCode}}</h1>
+      <h4>Mensaje: {{errorMsg}}</h4>
       <div>
       </div>
     </div>
