--- a/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-delivery-boy/home-delivery-boy.component.html
@@ -32,7 +32,7 @@
     [client]="order.client.name + ' ' + order.client.surname" 
     [paymentType]=order.paymentType.description
     price={{getPrice(order)}} 
-    orderStatus="En camino" 
+    orderStatus="Para repartir" 
     orderId={{order.id}}>
     </app-shop-card>
   </div>
