--- a/Front-end App/DeliverItAngularProject/src/app/payment-type-list/payment-type-list.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/payment-type-list/payment-type-list.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-<h1 class="descriptionLabel">Todos las formas de pago</h1>
+<h1 class="descriptionLabel">Todas las formas de pago</h1>
 <div class="container">
     <div class="cards-container">
       <li *ngFor="let paymentType of paymentTypes" (click)="onEditClick(paymentType.id)">
