Front/Back-end customer-current-orders

--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.html
@@ -1,5 +1,5 @@
 <app-customer-searchbar></app-customer-searchbar>
-<h3 class="link margin-left">Pedidos pendientes ></h3>
+<h3 class="link margin-left" routerLink="/customer-current-orders">Pedidos pendientes ></h3>
 <h6 id="categories-title">Explorá nuestras categorías</h6>
 <div class="parent-container-max-width">
   <div class="shop-types-container">
