add variations in frontend

--- a/Front-end App/DeliverItAngularProject/src/app/flavours-customer-item/flavours-customer-item.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/flavours-customer-item/flavours-customer-item.component.html
@@ -1,5 +1,9 @@
 <div class="flavour">
-  <p>s</p>
+  <div>
+    <p class="card-title">{{ productVariation.name }}</p>
+    <p class="card-subtitle">{{ productVariation.description }}</p>
+  </div>
+
   <button
     *ngIf="stateAdd; else elseBlock"
     class="button"
