select variations in frontend finished

--- a/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.html
@@ -13,7 +13,7 @@
     <button class="button" (click)="submitCustFlavours()">
       <ion-icon name="checkmark" size="20"></ion-icon>Listo
     </button>
-    <button class="secondary-button" routerLink="../">
+    <button class="secondary-button" (click)="goBack()">
       <ion-icon name="close"></ion-icon>Cancelar
     </button>
   </div>
