Auto stash before merge of "main" and "origin/main"

--- a/Front-end App/DeliverItAngularProject/src/app/admin-panel/admin-panel.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/admin-panel/admin-panel.component.html
@@ -43,3 +43,26 @@
     </div>
   </div>
 </div>
+
+<div class="options-container">
+  <div class="options" (click)="onAddCommissionPercentage()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img id="plus_icon" src="assets\buttons_logos\plus_sign_icon.png" alt="plus_sign_icon">
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Agregar porcentaje de comisión</p>
+      </div>
+    </div>
+  </div>
+  <div class="options" (click)="onEditCommissionPercentage()">
+    <div class="center">
+      <div class="buttons_logos">
+        <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="plus_sign_icon">
+      </div>
+      <div class="button_text">
+        <p id="add_prod_text">Editar porcentaje de comisión</p>
+      </div>
+    </div>
+  </div>
+</div>
