--- a/Front-end App/DeliverItAngularProject/src/app/commission-percentage-list/commission-percentage-list.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/commission-percentage-list/commission-percentage-list.component.scss
@@ -1,3 +1,5 @@
+@import '../../styles.scss';
+
 @media screen and (max-width: 576px) {
   .input-button {
     width: 80%;
@@ -43,3 +45,6 @@ li {
   margin-bottom: 5%;
 }
 
+.current {
+  color: $primary-red;
+}
