--- a/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/home-shop/home-shop.component.html
@@ -38,6 +38,16 @@
             </div>
         </div>
     </div>
+    <div class="options" (click)="onModifyProductVariations()">
+        <div class="center">
+            <div class="buttons_logos">
+                <img id="pencil_icon" src="assets\buttons_logos\pencil_edit_icon.png" alt="plus_sign_icon">
+            </div>
+            <div class="button_text">
+                <p id="add_prod_text">Editar variaciones de producto</p>
+            </div>
+        </div>
+    </div>
     <div class="options" (click)="onModifyShopData()">
         <div class="center">
             <div class="buttons_logos">
