--- a/Front-end App/DeliverItAngularProject/src/app/shop-add-product/shop-add-product.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-add-product/shop-add-product.component.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 <div class="container">
   <h1>Agregar producto</h1>
@@ -60,6 +61,34 @@
           Escoge alguna opción
         </div>
     </div>
+    <div class="input-group">
+      <h6>¿Acepta variaciones?</h6>
+      <div class="form-check form-switch">
+        <div class="inputContainer">
+          <div id="leftCol">
+            <label class="form-check-label">No acepta</label>
+          </div>
+          <div id="midCol">
+            <input type="checkbox" class="form-check-input" value="" id="variationsCheck" (click)="toggleSwitch()">
+          </div>
+          <div id="rightCol">
+            <label class="form-check-label" for="variationsCheck">Acepta</label>
+          </div>
+        </div>
+      </div>
+    </div>
+    <form class="input-button" [formGroup]="shopMaxVariationForm">
+      <div class="input-group" *ngIf="maxVariationsAllowed">
+        <h6>Máximas variaciones por producto</h6>
+        <div class="currency">
+            <input id="amount" type="number" min="0" formControlName="maxVariations">
+        </div>
+        <div [ngClass]="{'error-message-show': getMaxVariations().invalid && (submitted || getMaxVariations().touched)}" class="error-message" style="align-self: flex-start;" id="errors">
+          <span class="error-icon-red">&#9888;</span>
+            Ingresa alguna cantidad válida
+        </div>
+      </div>
+    </form>
     <div class="button-container">
       <app-primary-button class="button-style" title='CONFIRMAR' (click)="submit()">
       </app-primary-button>
