--- a/Front-end App/DeliverItAngularProject/src/app/shop-modify-product-variations/shop-modify-product-variations.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-modify-product-variations/shop-modify-product-variations.component.scss
@@ -93,43 +93,6 @@
     background-color:adjust-color($color: #d1d1d1);
 }
 
-#variationsCheck{
-  width: 4.5rem;
-  height: 1.5rem;
-  margin-left:15px;
-}
-
-#leftCol{
-  margin-right: auto;
-  text-align: left;
-  margin-left: -25px;
-}
-
-#rightCol{
-  text-align: left;
-  margin-right: auto;
-  margin-left: -50px;
-}
-
-#midCol{
-  margin-right: auto;
-  margin-left: -60px;
-}
-
-.inputContainer{
-  display: flex;
-}
-
-select{
-    width: 90%;
-    height: 40px;
-    border-color: (#d1d1d1);
-    border-style: solid;
-    border-width: 2.5px;
-    border-radius: 3.5px;
-    margin-bottom: 5%;
-}
-
-.button-container{
-  margin-bottom: 50px;
-}
+.last-button-container{
+    margin-bottom: 50px;
+  }
