--- a/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.html
@@ -1,6 +1,6 @@
 <div class="parent-container">
   <div class="container">
-    <h1 class="tile">Elige hasta {{ maxVariations }}</h1>
+    <h1 class="title">Elige hasta {{ maxVariations }}</h1>
 
     <div class="flavour-container" *ngFor="let pv of productVariations">
       <app-flavours-customer-item
