--- a/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/home-customer/home-customer.component.scss
@@ -1,6 +1,6 @@
 h6 {
   text-align: left;
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 #categories-title {
@@ -9,7 +9,7 @@ h6 {
 }
 
 .margin-left {
-  margin-left: 10%;
+  margin-left: 5%;
 }
 
 #popular-shops-title {
@@ -18,14 +18,14 @@ h6 {
 }
 
 .shop-types-container {
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .shop-cards-container {
-  width: 80%;
+  width: 90%;
 }
 
 .parent-container-max-width {
@@ -40,4 +40,79 @@ h6 {
 
 .footer {
   height: 40px;
+}
+
+// Sidenav
+
+mat-sidenav {
+  background-color: rgb(255, 255, 255);
+  width: 300px;
+}
+
+.menu-title-container {
+  display: flex;
+  flex-direction: column;
+  height: 70px;
+  gap: 15px;
+  margin: 20px;
+  margin-bottom: 40px;
+}
+
+.menu-options-container {
+  margin-left: 20px;
+}
+
+mat-sidenav-container {
+  height: 100vh;
+}
+
+mat-divider {
+  background-color: rgba($color: #000000, $alpha: 0.1);
+  margin: 20px;
+}
+
+.menu-option {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.menu-icon {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.address {
+  font-weight: 300;
+}
+
+.margin-0 {
+  margin: 0;
+}
+
+.menu-open-button {
+  font-size: 40px;
+  margin-right: 10%;
+}
+
+.container-searchbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+app-customer-searchbar {
+  margin-left: 5%;
+}
+
+.close-menu-button {
+  font-size: 40px;
+}
+
+.close-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 15px;
 }
