--- a/Front-end App/DeliverItAngularProject/src/styles.scss
+++ b/Front-end App/DeliverItAngularProject/src/styles.scss
@@ -1,9 +1,8 @@
-@import '~normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600&display=swap');
+@import "~normalize.css";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600&display=swap");
 
-
-$primary-red: #C00A0A;
-$secondary-red: #F3B5B5;
+$primary-red: #c00a0a;
+$secondary-red: #f3b5b5;
 
 * {
   user-select: none;
@@ -24,6 +23,11 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  font-family: Poppins;
+  font-size: 28px;
+}
+
 h3 {
   font-family: Poppins;
   font-size: 16px;
@@ -31,7 +35,7 @@ h3 {
 }
 
 h4 {
-  opacity: .65;
+  opacity: 0.65;
   color: #000;
   text-align: center;
   font-family: Poppins;
@@ -43,7 +47,7 @@ h4 {
   margin: 0;
 }
 
-h6, 
+h6,
 select,
 label {
   color: rgba(0, 0, 0, 1);
@@ -61,43 +65,43 @@ input[type="email"],
 input[type="password"],
 input[type="text"] {
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-family: Poppins;
   font-size: 15px;
   outline: none;
-  transition: .2s;
+  transition: 0.2s;
 }
 
-input[type="text"]{
+input[type="text"] {
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-family: Poppins;
   font-size: 13px;
   outline: none;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="text"]:focus {
-  border-bottom: 1px solid rgba(0, 0, 0, .8);
-  transition: .2s;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+  transition: 0.2s;
 }
 
 select {
   border-radius: 8px;
   height: 30px;
   width: 100%;
-  border-color: rgba(0, 0, 0, .2);
+  border-color: rgba(0, 0, 0, 0.2);
   font-family: Poppins;
   font-size: 14px;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 select:focus {
   outline: none;
-  transition: .2s;
-  border-color: rgba(0, 0, 0, .8);
+  transition: 0.2s;
+  border-color: rgba(0, 0, 0, 0.8);
 }
 
 p {
@@ -108,8 +112,8 @@ button {
   background-color: $primary-red;
   border-radius: 10px;
   border: none;
-  transition: .2s;
-  color: #FFF;
+  transition: 0.2s;
+  color: #fff;
   text-align: center;
   font-family: Poppins;
   font-size: 20px;
@@ -117,11 +121,15 @@ button {
   font-weight: 500;
   height: 50px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 button:hover {
-  transition: .2s;
-  opacity: .9;
+  transition: 0.2s;
+  opacity: 0.9;
 }
 
 /* Styles for the shop-card component,
@@ -164,7 +172,7 @@ they are in the global scss because it's used in different components */
   font-style: normal;
   color: #ff0000;
   opacity: 0;
-  transition: opacity .35s ease;
+  transition: opacity 0.35s ease;
 
   &-show {
     opacity: 1;
@@ -176,3 +184,5 @@ they are in the global scss because it's used in different components */
   cursor: pointer;
   margin-bottom: 30px;
 }
+// html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
