--- a/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/customer-search-results/customer-search-results.component.scss
@@ -1,3 +1,5 @@
+@import "src/styles.scss";
+
 .container {
   display: flex;
   align-items: center;
@@ -16,3 +18,22 @@
   width: 250px;
 }
 
+button {
+  font-weight: 400;
+  font-size: 25px;
+  border-radius: 100px;
+  height: 50px;
+  width: 50px;
+  border: 2px solid $primary-red;
+  background-color: white;
+}
+
+.searchbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.arrow-icon {
+  color: $primary-red;
+}
