--- a/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.scss
+++ b/Front-end App/DeliverItAngularProject/src/app/flavours-customer/flavours-customer.component.scss
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 576px) {
   .container {
-    width: 80%;
+    width: 90%;
   }
 }
 
@@ -35,6 +35,7 @@
 
 .title {
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .flavour-container {
