--- a/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.html
+++ b/Front-end App/DeliverItAngularProject/src/app/shop-list-product-variations/shop-list-product-variations.component.html
@@ -25,8 +25,8 @@
             [productId]="productVariation.id"
             title={{productVariation.name}}
             subtitle={{productVariation.description}}
-            imagePath='information_logo.png'
-            [hasEditButton]="true">
+            [hasEditButton]="true"
+            [hasImage]="false">
         </app-shop-card>
       </div>  
     </div>
